tests/positive/FancyPaths/other dep/Other.juvix
module Other;

axiom other : Type;
