tests/negative/WrongDeriving.juvix
module WrongDeriving;

axiom A : Type;

deriving instance i : A;
